# temples

./: Makefile  README.md  setup.cfg
temples/: __init__.py  config.py  data.py  run.py
tests/linreg/: run_linreg.py
tests/linreg/config/: env.toml  settings.toml
tests/linreg/linreg/: clean_data.py  config.py  create_data.py  create_raw_data.py  data.py  model.py
