[metadata]
name = temples
version = 0.1
author = "Théo Delecour",
author_email = "theo.delecour@gmail.com",
description = Tools for instant pipelines
long_description = file: README.md, LICENSE
license = MIT
url = https://github.com/theodcr/temples
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
install_requires =
    toml
packages = find:
test_suite = tests

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
test =
    pandas
    scikit-learn

[mypy]
ignore_missing_imports = True
warn_unused_configs = True
disallow_untyped_defs = True

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True

[flake8]
max-line-length = 88
doctests = True
exclude = .git, *.egg-info, __pycache__, docs, build, dist, .mypy_cache, .venv
